# Langchain-RAG-Agent

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  ecs-task-def.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
app/api/: fastapi_app.py
app/db/: mango_database.py  pinecone_memory_db.py
app/prompts/: create_agent_prompt.txt
app/services/: agent_bot.py  create_agent.py  preprocess.py
app/utils/: params.py  prompt.py  session_prompt.py
config/: params.yaml
frontend/: requirements.txt  streamlit_app.py
